--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -3,7 +3,9 @@
     <string-array name="activities">
         <item>Week 1</item>
         <item>Week 2a</item>
+        <item>Week 2b</item>
         <item>Week 3</item>
+        <item>Week 4</item>
         <item>Week 5</item>
     </string-array>
 </resources>
